[project]
name = "typedmongo"
version = "0.0.0"
description = "A modern Python MongoDB ODM"
authors = [
    {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
    "pymongo>=4.6.3",
    "motor>=3.4.0",
    "marshmallow>=3.21.1",
    "typing-extensions>=4.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
format = "ruff format ."
lint = "ruff ."
test = "pytest --cov=typedmongo tests/"
sync = "python typedmongo/sync.py"

[tool.ruff]
extend-select = ["I"]
exclude = ["typedmongo/client.py"]

[tool.ruff.lint]
ignore = ["E731"]

[tool.coverage]
ignores = [
    "raise NotImplementedError"
]

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
