[project]
name = "typedmongo"
version = "1.18.2"
description = "A production-ready modern Python MongoDB ODM"
authors = [
    {name = "abersheeran", email = "me@abersheeran.com"},
]
dependencies = [
    "pymongo>=4.13.2",
    "marshmallow>=4.0.0",
    "typing-extensions>=4.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache2.0"}

[project.optional-dependencies]
pydantic = [
    "pydantic>=2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
exclude = ["typedmongo/client.py", "typedmongo/fields.py", "typedmongo/table.py"]

[tool.ruff.lint]
ignore = ["E731"]
extend-select = ["I"]

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "case _:",
    "return NotImplemented",
    "raise NotImplementedError",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true
omit = ["typedmongo/sync.py"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "ruff format ."
lint = "ruff check ."
sync = "python typedmongo/sync.py"
sync_test = "python tests/sync.py"
pre_test = {composite = ["sync", "sync_test"]}
test = "pytest --cov=typedmongo --asyncio-mode=auto tests/"

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.6",
    "pydantic>=2.11.3",
]
